some more apis added
