# models/filters/filter.go
@@ -1,12 +1,5 @@
 package filters
 
-type UserFilter struct {
-	UserId   int64
-	Username string
-	Email    string
-	Mobile   string
-}
-
 type GroupFilter struct {
 	UserId int64
 	Limit  int
