# models/filters/users.go
@@ -1,0 +1,8 @@
+package filters
+
+type UserFilter struct {
+	UserId   int64
+	Username string
+	Email    string
+	Mobile   string
+}
